# nixjs

./: CONTRIBUTE.md  Cargo.toml  README.md  flake.nix
src/: main.rs
src/cmd/: eval.rs  mod.rs  transpile.rs
src/eval/: nix_v8.rs
tests/cmd/: eval.rs  transpile.rs
