[package]
name = "nixjs"
description = "Nix JavaScript transpiler and interpreter."
documentation = "https://github.com/urbas/nixjs/blob/master/README.md"
edition = "2021"
homepage = "https://github.com/urbas/nixjs"
license = "MIT"
repository = "https://github.com/urbas/nixjs"
version = "0.0.1"

[lib]
name = "nixjs"
path = "src/lib.rs"

[[bin]]
name = "nixjs"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.5"
predicates = "2.1.1"

[dependencies]
clap = "4.0.18"
colored = "2.0.0"
rowan = "0"
rnix = "0"
tempfile = "3.3.0"
v8 = "0.80.0"
